@@ -28,7 +28,10 @@ COMMITERS
 Do not forget to update this page on the wiki when making changes relevant to developers:
 http://docs.joomla.org/index.php?title=Version_1.6_Developer_Notes
 
-27-Jan-2009 Sam moffatt
+28-Jan-2009 Sam Moffatt
+ # Fixed quirk with backup system not storing params and data properly for backup entries
+
+27-Jan-2009 Sam Moffatt
  ^ Changed in extension language system to use same file names instead of just xx-XX.ini
  ^ Changed data load adapter prefix to JDataLoader
  # Fixed issue with JFolder regexp's; now ignores backup files by default (files ending with a ~)
